# sentinel-soc-V1

./: Dockerfile  LICENSE  README.md  __init__.py  baseline.py  client.py  inference.py  make_pdf.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: sync_to_hf.yml
openenv_support_ticket_triage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  kb.json  sentinel_env.py  support_ticket_triage_environment.py  tickets.json
